--- a/Vue - CRUD-Manager/css/style.css
+++ b/Vue - CRUD-Manager/css/style.css
@@ -1,29 +1,35 @@
 .bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-  }
-
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
-  }
-  body {
-    min-height: 75rem;
-    padding-top: 4.5rem;
-  }
-
-  .bg-purple{
-    background-color: #7367f0;
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
-.bg-purple-light{
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+body {
+  min-height: 75rem;
+}
+
+.bg-purple {
+  background-color: #7367f0;
+}
+
+.bg-purple-light {
   background: #e6e4ff !important;
 }
 
-[v-cloak]{
-    display:  none;
+
+.rounded {
+  border-radius: var(--bs-border-radius) !important;
+  margin-top: 30px;
+}
+
+[v-cloak] {
+  display: none;
 }
